--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Flask-Moment==1.0.2
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.0
 greenlet==1.1.2
+gunicorn==20.0.4
 idna==3.3
 importlib-metadata==4.10.1
 importlib-resources==5.4.0
